# Agar-IO

./: .isort.cfg  LICENSE  README.md  main.py  pyproject.toml  settings.env
.mypy_cache/3.9/: _ast.data.json  _ast.meta.json  _importlib_modulespec.data.json  _importlib_modulespec.meta.json  _random.data.json  _random.meta.json  abc.data.json  abc.meta.json  ast.data.json  ast.meta.json  builtins.data.json  builtins.meta.json  codecs.data.json  codecs.meta.json  enum.data.json  enum.meta.json  genericpath.data.json  genericpath.meta.json  io.data.json  io.meta.json  main.data.json  main.meta.json  math.data.json  math.meta.json  mmap.data.json  mmap.meta.json  posix.data.json  posix.meta.json  random.data.json  random.meta.json  sys.data.json  sys.meta.json  turtle.data.json  turtle.meta.json  types.data.json  types.meta.json  typing.data.json  typing.meta.json  typing_extensions.data.json  typing_extensions.meta.json
.mypy_cache/3.9/agario/: __init__.data.json  __init__.meta.json  config.data.json  config.meta.json  enemy.data.json  enemy.meta.json  enemymanager.data.json  enemymanager.meta.json  food.data.json  food.meta.json  foodmanager.data.json  foodmanager.meta.json  gamemanager.data.json  gamemanager.meta.json  player.data.json  player.meta.json  schemas.data.json  schemas.meta.json
agario/: colors.py  config.py  enemy.py  enemymanager.py  fakefood.py  food.py  foodmanager.py  gamemanager.py  player.py  schemas.py
agario/scenas/: creditscene.py  gameoverscene.py  gamescene.py  pausescene.py  settingscene.py  titlescene.py  winscene.py
(+88 files in other folders)
